# fastapi_template

./: .dockerignore  .env_example  .gitignore  .hadolint.yaml  .ignore  .pre-commit-config.yaml  .spectral.yaml  Dockerfile  Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml  pyproject.toml
.github/: dependabot.yml  labeler.yml  pull_request_template.md
.github/workflows/: ci.yml  openapi-changelog.yml
alembic/: env.py
alembic/versions/: 2026_05_17_1034-171271b45a9e_init.py
app/: __init__.py  worker.py
app/bg_jobs/: hooks.py
app/core/: auth.py  config.py  containers.py  db.py  ip_address.py  logging.py  redis_client.py  types.py
app/dependencies/: current_user.py  db_session.py  host.py  pagination.py
app/models/: __init__.py  base.py  session.py  user.py
app/repos/: base.py  session.py  user.py
app/resources/: exc_handlers.py  openapi.py  regexps.py  strings.py
app/resources/exceptions/: __init__.py  common.py
app/schemas/: base.py
app/schemas/auth/: __init__.py  request.py  response.py
app/schemas/fields/: dt_without_tz.py  timestamp.py
app/schemas/session/: __init__.py  request.py  response.py
app/schemas/user/: __init__.py  request.py  response.py
app/services/: auth.py  base.py  jwt.py  password.py  session.py  user.py
app/utils/: cookies.py  pagination.py  validation.py
app/views/: __init__.py  system.py
app/views/auth/: __init__.py  logout.py  refresh.py  sign_in.py
tests/: conftest.py
tests/factories/: __init__.py  base.py  session.py  user.py
tests/test_integration/: conftest.py  test_base_repo.py  test_base_service.py  test_smoke.py
tests/test_integration/mocks/: model.py  repo.py  schema.py  service.py
