[project]
name = "fastapi-template"
version = "0.1.0"
description = "FastAPI template"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "FastAPI Template", email = "hello@example.com" },
    { name = "Ilia Boiarintsev", email = "theilyaboyarintsev@gmail.com" },
]
dependencies = [
    "fastapi>=0.118.3",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.11.0",
    "uvicorn[standard]>=0.37.0",
    "httpx>=0.28.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "saq[redis]>=0.25.2",
    "that-depends>=3.7.0",
    "redis[hiredis]>=5.3.1",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
]

[dependency-groups]
lint = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
    "pyright>=1.1.406",
    "types-pyyaml>=6.0.12.20250915",
    "types-redis>=4.6.0.20241004",
    "types-python-dateutil>=2.9.0.20251008",
]
tests = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.2.0",
    "polyfactory>=2.22.2",
    "pytest-sugar>=1.1.1",
    "faker>=30.0.0",
]

[tool.uv]
default-groups = ["lint", "tests"]

[tool.ruff]
target-version = "py313"
exclude = [".git", "__pycache__"]
line-length = 99
fix = true
lint.preview = true
lint.ignore = [
    "D10",
    "D203",
    "D213",
    "D401",
    "COM812",
    "PLW3201",
    "RUF067",
]
lint.select = [
    "FAST",
    "B",
    "TRY",
    "EM",
    "C9",
    "D",
    "F",
    "Q",
    "T20",
    "SIM",
    "ERA",
    "DTZ",
    "UP",
    "FBT",
    "I",
    "RUF",
    "PL",
    "PTH",
    "PIE",
    "G",
    "C4",
    "N",
    "COM",
    "ASYNC",
    "PGH",
    "FURB",
]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.ruff.lint.pylint]
max-positional-args = 7
max-args = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/test_*.py" = ["D10", "PLR091"]
"app/core/containers.py" = ["ERA001"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.flake8-implicit-str-concat]
allow-multiline = false

[tool.pyright]
typeCheckingMode = "basic"
include = ["app", "tests"]
exclude = ["**/__pycache__"]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"

[tool.pytest.ini_options]
timeout = 5
norecursedirs = "*.egg .eggs dist build docs .tox .git __pycache__"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
filterwarnings = ["ignore"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--color=yes",
    "--import-mode=importlib",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "assert False",
    "case _:",
]

[tool.mypy]
plugins = "pydantic.mypy"
exclude = [
    "venv/",
    ".venv/",
    "build/",
    "dist/",
    ".*egg-info/",
    "__pycache__/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".ruff_cache/",
]
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
ignore_missing_imports = true
